getProductLikesByCategory method added and improvements